--- a/uasdm-ui/src/app/admin/component/account/accounts.component.html
+++ b/uasdm-ui/src/app/admin/component/account/accounts.component.html
@@ -22,6 +22,7 @@
             <div class="col-md-12">
                 <generic-table *ngIf="config != null" [cols]="cols" [config]="config" [refresh]="refresh" (click)="onClick($event)"></generic-table>
                 <button *ngIf="isAdmin" (click)="uploadUsers()" class="btn btn-primary pull-left" style="margin:10px 0; margin-top: -40px;">Upload Users</button>
+                <button *ngIf="isAdmin" (click)="exportUsers()" class="btn btn-primary pull-left" style="margin:10px 0; margin-top: -40px;">Export Users</button>
             </div>
         </div>
 <!--     </div> -->
