--- a/uasdm-ui/src/app/site/component/sensor/sensor.component.html
+++ b/uasdm-ui/src/app/site/component/sensor/sensor.component.html
@@ -52,6 +52,10 @@
           [label]="'Has GeoLogger'" [disabled]="mode === 'READ'"></boolean-field>
       </div>
       <div class="form-group">
+        <boolean-field [value]="sensor.highResolution" (valueChange)="sensor.highResolution = $event"
+          [label]="'High Resolution'" [disabled]="mode === 'READ'"></boolean-field>
+      </div>
+      <div class="form-group">
         <label>Pixel Size Width</label>
         <input [(ngModel)]="sensor.pixelSizeWidth" name="pixelSizeWidth" type="number" step="0" class="form-control"
           [disabled]="mode === 'READ'" required />
