--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -116,7 +116,8 @@
             <div class="col-md-8">
               <div class="form-group">
                 <label for="projectionName">Point Cloud Projection Name</label>
-                <input [(ngModel)]="values.projectionName" name="projectionName" type="text" class="form-control" placeholder="" />
+                <input [(ngModel)]="values.projectionName" name="projectionName" type="text" class="form-control"
+                  placeholder="" />
               </div>
             </div>
           </div>
@@ -319,8 +320,8 @@
                 <div style="padding:10px;">
                   <div class="form-group">
                     <label for="outFileNamePrefix">Output Product Name Prefix</label>
-                    <input [(ngModel)]="values.outFileNamePrefix" name="outFileNamePrefix" type="input" class="form-control"
-                      placeholder="Output product name prefix..." />
+                    <input [(ngModel)]="values.outFileNamePrefix" name="outFileNamePrefix" type="input"
+                      class="form-control" placeholder="Output product name prefix..." />
                   </div>
 
                   <div *ngIf="config.processOrtho || config.processDem" class="form-group">
@@ -419,6 +420,39 @@
 	                          </code>        
 	                      </pre>
                   </div>
+
+                  <div *ngIf="config.processOrtho || config.processDem" class="form-group">
+                    <boolean-field [(value)]="values.includeGroundControlPointFile"
+                      label="Use ground control point file when processing (if uploaded)"></boolean-field>
+                  </div>
+
+                  <div class="form-group" *ngIf="values.includeGroundControlPointFile">
+                    <label for="groundControlPointFileName">Ground control point file name</label>
+                    <input [(ngModel)]="values.groundControlPointFileName" name="groundControlPointFileName"
+                      type="input" class="form-control" placeholder="File name..." />
+                  </div>
+
+                  <div *ngIf="values.includeGroundControlPointFile">
+                    <p>File format:</p>
+                    <pre>
+                        <code>
+                        projection
+                        geo_x geo_y geo_z im_x im_y image_name [gcp_name] [extra1] [extra2]
+                        ...						
+                        </code>
+                    </pre>
+                    <p>Example:</p>
+                    <pre>
+                        <code>
+                        +proj=utm +zone=10 +ellps=WGS84 +datum=WGS84 +units=m +no_defs
+                        544256.7 5320919.9 5 3044 2622 IMG_0525.jpg
+                        544157.7 5320899.2 5 4193 1552 IMG_0585.jpg
+                        544033.4 5320876.0 5 1606 2763 IMG_0690.jpg							
+                        </code>        
+                    </pre>
+                  </div>
+
+
                 </div>
               </div>
             </div>
